@@ -200,7 +200,7 @@ def generate_simple_plan(todo_set, start_revid, stop_revid, onto_revid, graph,
                 continue
         else:
             parents = (new_parent,)
-        newrevid = generate_revid(oldrevid)
+        newrevid = generate_revid(oldrevid, parents)
         assert newrevid != oldrevid, "old and newrevid equal (%r)" % newrevid
         assert isinstance(parents, tuple), "parents not tuple: %r" % parents
         replace_map[oldrevid] = (newrevid, parents)
@@ -267,7 +267,8 @@ def generate_transpose_plan(ancestry, renames, graph, generate_revid):
                     parents = list(parents)
                     parents[parents.index(r)] = replace_map[r][0]
                     parents = tuple(parents)
-                replace_map[c] = (generate_revid(c), tuple(parents))
+                replace_map[c] = (generate_revid(c, tuple(parents)), 
+                                  tuple(parents))
                 if replace_map[c][0] == c:
                     del replace_map[c]
                 elif c not in processed:
